Update SIGN UP PAGE.HTML

--- a/SIGN UP PAGE.HTML
+++ b/SIGN UP PAGE.HTML
@@ -96,7 +96,7 @@
 
     <div class="login-option">
       Already have an account?
-      <a href="LOGIN.html">Login</a>
+      <a href="LOGIN.HTML">Login</a>
     </div>
 
     <script>
