--- a/LOGIN.HTML
+++ b/LOGIN.HTML
@@ -123,7 +123,7 @@
 
         if (username === savedUsername && password === savedPassword) {
           // Redirect to lobby after successful login
-          window.location.href = "lobby.html";
+          window.location.href = "Lobby.html";
         } else {
           alert("Invalid credentials, please try again.");
         }
