Update SIGN UP PAGE.HTML

--- a/SIGN UP PAGE.HTML
+++ b/SIGN UP PAGE.HTML
@@ -116,7 +116,7 @@
         localStorage.setItem("password", password);
 
         // Redirect to lobby after registration
-        window.location.href = "lobby.html";
+        window.location.href = "Lobby.html";
       });
     </script>
   </div>
