--- a/Lobby.html
+++ b/Lobby.html
@@ -115,11 +115,11 @@
     </div>
 
     <div class="game-list">
-      <div class="game-item" onclick="window.location.href='minecraft.html'">
+      <div class="game-item" onclick="window.location.href='MINECRAFT.HTML'">
         <img src="Flux_Dev_Create_a_highly_detailed_4K_digital_artwork_of_a_Mine_3.jpg" alt="Minecraft">
         <h3>Minecraft</h3>
       </div>
-      <div class="game-item" onclick="window.location.href='roblox.html'">
+      <div class="game-item" onclick="window.location.href='ROBLOX.HTML'">
         <img src="Flux_Dev_Create_a_highresolution_4K_image_measuring_1450_x_450_0.jpg" alt="Roblox">
         <h3>Roblox</h3>
       </div>
@@ -127,15 +127,15 @@
         <img src="CALL OF DUTY.jpg" alt="Call of Duty">
         <h3>Call of Duty</h3>
       </div>
-      <div class="game-item" onclick="window.location.href='FREE FIRE.html'">
+      <div class="game-item" onclick="window.location.href='FREE FIRE.HTML'">
         <img src="FREE FIRE.jpg" alt="Free Fire">
         <h3>Free Fire</h3>
       </div>
-      <div class="game-item" onclick="window.location.href='AMONG US.html'">
+      <div class="game-item" onclick="window.location.href='AMONG US.HTML'">
         <img src="AMONG US.jpeg" alt="Among Us">
         <h3>Among Us</h3>
       </div>
-      <div class="game-item" onclick="window.location.href='bgmi.html'">
+      <div class="game-item" onclick="window.location.href='BGMI.HTML'">
         <img src="bbgmi.jpg" alt="BGMI">
         <h3>BGMI</h3>
       </div>
@@ -146,7 +146,7 @@
     </div>
 
     <div class="button-container">
-      <button onclick="window.location.href='SpaceSite-AI.html'">Back to Home</button>
+      <button onclick="window.location.href='index.html'">Back to Home</button>
     </div>
 
 
