--- a/ROBLOX.HTML
+++ b/ROBLOX.HTML
@@ -151,7 +151,7 @@
     </div>
 
     <div class="button-container">
-      <button onclick="window.location.href='lobby.html'">⬅ Back to Lobby</button>
+      <button onclick="window.location.href='Lobby.html'">⬅ Back to Lobby</button>
     </div>
   </div>
 
