--- a/LOGIN.HTML
+++ b/LOGIN.HTML
@@ -108,7 +108,7 @@
       <a href="SIGN UP PAGE.HTML">Sign Up</a>
     </div>
 
-    <a href="SpaceSite-AI.html" class="back-link">⬅ Back to Home</a>
+    <a href="index.html" class="back-link">⬅ Back to Home</a>
 
     <script>
       document.getElementById("login-form").addEventListener("submit", function(e) {
