--- a/MINECRAFT.HTML
+++ b/MINECRAFT.HTML
@@ -141,9 +141,9 @@
 
     <div class="invite-box">
       <h3>🌍 Minecraft Server Info</h3>
-      <div class="invite-code">Server IP: <span style="color: #fff;">halftruthxd.minefort.com</span></div>
+      <div class="invite-code">Server IP: <span style="color: #fff;">Halftruthsmp.aternos.me</span></div>
       <div class="invite-code">Java Port: <span style="color: #fff;">25565</span></div>
-      <div class="invite-code">Bedrock Port: <span style="color: #fff;">19132</span></div>
+      <div class="invite-code">Bedrock Port: <span style="color: #fff;">64143</span></div>
       <button class="copy-btn" onclick="copyServerIP()">Copy IP</button>
     </div>
 
