--- a/MINECRAFT.HTML
+++ b/MINECRAFT.HTML
@@ -171,7 +171,7 @@
     }
 
     function copyServerIP() {
-      const ip = "play.hgcserver.net"; // Update this if your IP changes
+      const ip = "Halftruthsmp.aternos.me"; // Update this if your IP changes
       navigator.clipboard.writeText(ip);
       alert("✅ Server IP copied: " + ip);
     }
